# oop_analysis

./: README.md  build_graph.py  fetch_from_dir.py  graphs_to_LW.py  main.py  rename_dir.py  visualize_clusters.py
CodeDatabase/107/LR4_src/: CMakeLists.txt  DEBUG_LOG.txt  main.cpp
CodeDatabase/107/LR4_src/config/: keybindings.cfg
CodeDatabase/107/LR4_src/include/Actions/: AttackAction.h  GameAction.h  MoveAction.h  SpellAction.h  ToggleRangeAction.h
CodeDatabase/107/LR4_src/include/Board/: Board.h  Cell.h  Grid.h  Trap.h
CodeDatabase/107/LR4_src/include/Entity/: EntityManager.h
CodeDatabase/107/LR4_src/include/Events/: EventBus.h  GameEvent.h
CodeDatabase/107/LR4_src/include/Input/: ConsoleInputReader.h  Direction.h  GameCommand.h  GuiInputReader.h  IInputReader.h  KeyBindings.h
CodeDatabase/107/LR4_src/include/Logging/: GameLogger.h
CodeDatabase/107/LR4_src/include/Magic/: GameSpellContext.h  GuiSpellContext.h  Hand.h  ISpellContext.h  MockSpellContext.h  SpellBuffContext.h  SpellCard.h  SpellFactory.h  SpellParams.h  TrapRegistry.h
CodeDatabase/107/LR4_src/include/Rendering/: ConsoleRenderer.h  GuiRenderer.h  IGameRenderer.h  ImprovedGuiRenderer.h
CodeDatabase/107/LR4_src/include/UI/: ConsoleUtils.h  GameView.h  GuiMenuSystem.h  SpellMenuRenderer.h
CodeDatabase/107/LR4_src/include/Utils/: Logger.h  Random.h
CodeDatabase/107/LR4_src/include/core/: GameController.h  GameExceptions.h  GameSaveManager.h  Level.h  LevelManager.h
CodeDatabase/107/LR4_src/src/Actions/: AttackAction.cpp  GameAction.cpp  MoveAction.cpp  SpellAction.cpp  ToggleRangeAction.cpp
CodeDatabase/107/LR4_src/src/Board/: Board.cpp  Grid.cpp  Trap.cpp
CodeDatabase/107/LR4_src/src/Entity/: EntityManager.cpp
CodeDatabase/107/LR4_src/src/Events/: EventBus.cpp  GameEvent.cpp
CodeDatabase/107/LR4_src/src/Input/: ConsoleInputReader.cpp  GuiInputReader.cpp  KeyBindings.cpp
CodeDatabase/107/LR4_src/src/Logging/: GameLogger.cpp
CodeDatabase/107/LR4_src/src/Magic/: GameSpellContext.cpp  GuiSpellContext.cpp  Hand.cpp  SpellBuffContext.cpp  SpellCard.cpp  SpellFactory.cpp  TrapRegistry.cpp
CodeDatabase/107/LR4_src/src/Rendering/: ConsoleRenderer.cpp  GuiRenderer.cpp  ImprovedGuiRenderer.cpp
CodeDatabase/107/LR4_src/src/UI/: ConsoleUtils.cpp  GuiMenuSystem.cpp  SpellMenuRenderer.cpp
CodeDatabase/107/LR4_src/src/Utils/: Logger.cpp  Random.cpp
CodeDatabase/107/LR4_src/src/core/: GameSaveManager.cpp  Level.cpp  LevelManager.cpp
CodeDatabase/107/LR4_src/tests/: CMakeLists.txt  COMPILATION_GUIDE.md  README.md  test_compilation.cpp  test_spells.cpp
CodeDatabase/123/: Building.cpp  Building.h  BuildingSave.h  CMakeLists.txt  Character.cpp  Character.h  CharacterInterface.cpp  CharacterInterface.h  CheckSave.h  ChooseHandSelection.h  ChooseHitType.h  ConsoleController.h  DirectDamageSpell.cpp  DirectDamageSpell.h  Enemy.cpp  Enemy.h  EnemySave.h  EnemyVectorSave.h  Entity.cpp  Entity.h  ExitFromProgram.h  Game.cpp  Game.h  GameColleague.h  GameController.h  GameSaveColleague.h  GameSaveMediator.h  GameScreen.cpp  GameScreen.h  GoToGame.h  GoToMainMenu.h  GoToNewGame.h  GoToPause.h  GoToScreen.h  GoToTransitionToNewLevel.h  Hand.cpp  Hand.h  HandInterface.cpp  HandInterface.h  HasFont.cpp  (+63 more)
CodeDatabase/137/: Ally.cpp  Ally.h  AreaDamageSpell.cpp  AreaDamageSpell.h  CMakeLists.txt  Cell.cpp  Cell.h  Command.cpp  Command.h  DirectDamageSpell.cpp  DirectDamageSpell.h  Enemy.cpp  Enemy.h  EnemyBuilding.cpp  EnemyBuilding.h  EnemyTower.cpp  EnemyTower.h  EnhancementSpell.cpp  EnhancementSpell.h  Game.cpp  Game.h  GameController.h  GameEvent.cpp  GameEvent.h  GameException.h  GameField.cpp  GameField.h  GameRenderer.cpp  GameRenderer.h  GameState.h  GameView.h  InputReader.cpp  InputReader.h  KeyBindings.cpp  KeyBindings.h  Logger.cpp  Logger.h  Player.cpp  Player.h  PlayerHand.cpp  (+8 more)
CodeDatabase/179/: CMakeLists.txt  Cell.h  CellType.h  CommandReader.cpp  CommandReader.h  Enemy.cpp  Enemy.h  EnemyBuilding.cpp  EnemyBuilding.h  EnemyTower.cpp  EnemyTower.h  FightMode.h  Game.cpp  Game.h  GameCommand.h  GameController.h  GameEventNotifier.cpp  GameEventNotifier.h  GameException.h  GameField.cpp  GameField.h  GameObject.cpp  GameObject.h  GameRenderer.cpp  GameRenderer.h  GameView.h  ICommanReader.h  IGameRenderer.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Position.h  Spell.cpp  Spell.h  SpellHand.cpp  SpellHand.h  Trap.cpp  Trap.h  controls.cfg  (+1 more)
CodeDatabase/73/: Ally.cpp  Ally.h  AoESpell.cpp  AoESpell.h  BoostSpell.cpp  BoostSpell.h  CMakeLists.txt  Cell.cpp  Cell.h  Command.h  Creature.cpp  Creature.h  DirectDamageSpell.cpp  DirectDamageSpell.h  Enemy.cpp  Enemy.h  EnemyBuilding.cpp  EnemyBuilding.h  EnemyTower.cpp  EnemyTower.h  Entity.cpp  Entity.h  Field.cpp  Field.h  Game.cpp  Game.h  GameExceptions.h  GameLauncher.h  GameView.cpp  GameView.h  ISpell.h  InputHandler.cpp  InputHandler.h  Logger.h  Player.cpp  Player.h  PlayerHand.cpp  PlayerHand.h  SummonSpell.cpp  SummonSpell.h  (+6 more)
CodeDatabase/92/: AreaSpell.cpp  AreaSpell.h  CMakeLists.txt  Command.h  ConsoleInputHandler.cpp  ConsoleInputHandler.h  ConsoleRenderer.cpp  ConsoleRenderer.h  DirectSpell.cpp  DirectSpell.h  Enemy.h  EnemyTower.cpp  EnemyTower.h  Entity.cpp  Entity.h  Field.cpp  Field.h  Game.cpp  Game.h  GameController.h  GameManager.cpp  GameManager.h  GameObserver.h  GameVisualizer.h  Pair_operations.h  Player.cpp  Player.h  PlayerHand.cpp  PlayerHand.h  Spell.cpp  Spell.h  TrapSpell.cpp  TrapSpell.h  main.cpp
CodeDatabase/97/: Ally.cpp  Ally.h  AreaDamageSpell.cpp  AreaDamageSpell.h  BuildingSystem.cpp  BuildingSystem.h  CMakeLists.txt  Cell.cpp  Cell.h  CombatSystem.cpp  CombatSystem.h  ConfigurateInput.cpp  ConfigurateInput.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Coord.cpp  Coord.h  DirectDamageSpell.cpp  DirectDamageSpell.h  Enemy.cpp  Enemy.h  EnemyAISystem.cpp  EnemyAISystem.h  EnemyBuilding.cpp  EnemyBuilding.h  Entity.cpp  Entity.h  Field.cpp  Field.h  GameModel.cpp  GameModel.h  GameState.cpp  GameState.h  GameView.cpp  GameView.h  GameVisualizer.h  Hand.cpp  Hand.h  InputHandler.h  LevelManager.cpp  (+30 more)
(+9032 files in other folders)
