cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        Coord.cpp
        Coord.h
        Entity.cpp
        Entity.h
        Cell.cpp
        Cell.h
        Player.cpp
        Player.h
        Enemy.cpp
        Enemy.h
        EnemyBuilding.cpp
        EnemyBuilding.h
        Field.cpp
        Field.h
        Spell.cpp
        Spell.h
        Hand.cpp
        Hand.h
        DirectDamageSpell.cpp
        DirectDamageSpell.h
        AreaDamageSpell.cpp
        AreaDamageSpell.h
        TrapSpell.cpp
        TrapSpell.h
        Trap.cpp
        Trap.h
        SummonSpell.cpp
        SummonSpell.h
        Ally.cpp
        Ally.h
        UpgradeSpell.cpp
        UpgradeSpell.h
        Spawner.cpp
        Spawner.h
        SpellFactory.cpp
        SpellFactory.h
        GameModel.cpp
        GameModel.h
        CombatSystem.cpp
        CombatSystem.h
        MovementSystem.cpp
        MovementSystem.h
        EnemyAISystem.cpp
        EnemyAISystem.h
        SpawnerSystem.cpp
        SpawnerSystem.h
        BuildingSystem.cpp
        BuildingSystem.h
        GameView.cpp
        GameView.h
        SaveExceptions.cpp
        SaveExceptions.h
        SaveManager.cpp
        SaveManager.h
        GameState.cpp
        GameState.h
        LevelManager.cpp
        LevelManager.h
        ProgressionSystem.cpp
        ProgressionSystem.h
        InputHandler.h
        ConfigurateInput.cpp
        ConfigurateInput.h
        TemplatedGameController.h
        ConsoleRenderer.cpp
        ConsoleRenderer.h
        GameVisualizer.h
)
